Add react rendering for new card data
Co-authored-by: Madiha Latif <madihagoheer@outlook.com>

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,13 +1,21 @@
 div.card {
-  border-radius: 3px;
-  border: 3px solid black;
-  width: 20em;
-  height: 23em;
-  margin: 2em;
-  padding: 1em;
+	border-radius: 3px;
+	border: 3px solid black;
+	width: 20em;
+	height: 23em;
+	margin: 2em;
+	padding: 1em;
 }
 
 body {
   font-family: "Trebuchet MS", Helvetica, sans-serif
 }
 
+.greeting {
+    background-color: pink;
+    font-size: 14pt;
+}
+
+.next-link {
+    background-color: rgb(147, 147, 215);
+}
