--- a/templates/cards.html
+++ b/templates/cards.html
@@ -24,4 +24,8 @@
 <!-- Mount Myreen's card on to this element. -->
 <div id="myreen"></div>
 
+<!-- Mount Myreen's card on to this element. -->
+<div class="test"></div>
+
+
 {% endblock %}
