Rename html class and container
Co-authored-by: Madiha Latif <madihagoheer@outlook.com>

--- a/templates/cards.html
+++ b/templates/cards.html
@@ -9,23 +9,8 @@
 
 {% block body %}
 
-<!-- Mount Balloonicorn's card on to this element. -->
-<div id="balloonicorn"></div>
-
-<!-- Mount Float's card on to this element. -->
-<div id="float"></div>
-
-<!-- Mount Llambda's card on to this element. -->
-<div id="llambda"></div>
-
-<!-- Mount Merge's card on to this element. -->
-<div id="merge"></div>
-
-<!-- Mount Myreen's card on to this element. -->
-<div id="myreen"></div>
-
-<!-- Mount Myreen's card on to this element. -->
-<div class="test"></div>
+<!-- Mount All card on to this element. -->
+<div class="container"></div>
 
 
 {% endblock %}
